Upgrade to Spring Batch 6